--- a/source/manifest.json
+++ b/source/manifest.json
@@ -14,8 +14,12 @@
 	},
 	"permissions": [
 		"storage",
-		"notifications"
+		"notifications",
+		"https://github.com/*"
 	],
+	"optional_permissions": [
+		"https://*/"
+	  ],
 	"options_ui": {
 		"chrome_style": true,
 		"page": "options.html"
