--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	},
 	"dependencies": {
 		"webext-options-sync": "^0.21.2",
-		"webextension-polyfill": "^0.4.0"
+		"webextension-polyfill": "^0.4.0",
+		"await-timeout": "1.1.1"
 	},
 	"devDependencies": {
 		"chrome-webstore-upload-cli": "^1.2.0",
