--- a/source/manifest.json
+++ b/source/manifest.json
@@ -6,23 +6,25 @@
 	"manifest_version": 2,
 	"minimum_chrome_version": "74",
 	"icons": {
-		"48": "icon48.png",
-		"16": "icon16.png"
+		"48": "icons/icon48.png",
+		"16": "icons/icon16.png"
 	},
 	"browser_action": {
-		"default_icon": "icon48.png"
+		"default_icon": "icons/icon48.png",
+		"default_popup": "popup/popup.html"
 	},
 	"permissions": [
 		"storage",
 		"notifications",
-		"https://github.com/*"
+		"https://github.com/*",
+		"https://github.office.opendns.com/*"
 	],
 	"optional_permissions": [
 		"https://*/"
 	  ],
 	"options_ui": {
 		"chrome_style": true,
-		"page": "options.html"
+		"page": "options/options.html"
 	},
 	"background": {
 		"persistent": true,
@@ -30,5 +32,6 @@
 			"browser-polyfill.min.js",
 			"background.js"
 		]
-	}
+	},
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
