Fixed bugs and got working version

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -29,5 +29,5 @@
 			"background.js"
 		]
 	},
-	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://github.githubassets.com; object-src 'self'"
 }
